# my_dashboard

./: DB.xlsx  README.md  app.py  bootstrap.py  config.ini  dh.csv  form_data.xlsx  form_data_2025-11-03_07-24-39.xlsx  main.py  pyproject.toml  scrape_spa.py  spa.html  spa.py  spa.txt  x.py
assets/: 2025-11-04 Loss tree (Primary Monitoring Analysis Tool).html  2025-11-05 Loss tree (Primary Monitoring Analysis Tool).html  2025-11-06 Loss tree (Primary Monitoring Analysis Tool).html  output_new.txt  spa1.html  spa3.html
components/: card.py  card1.py  cus_card.py  grok_card.py  grok_card1.py
data/: issue_cards.csv  users.csv
spa/: spa.html  spa2.html
src/my_dashboard/: __init__.py  __main__.py  config.ini
src/my_dashboard/components/: editble_tableview.py  history_window.py  issue_card.py  sidebar.py  target_editor.py
src/my_dashboard/controllers/: __init__.py  dashboard_controller.py
src/my_dashboard/services/: __init__.py  achievement_service.py  card_service.py  spa_service.py
src/my_dashboard/ui/: __init__.py  app_window.py  dashboard_view.py  decorators.py
src/my_dashboard/utils/: constants.py  csvhandle.py  helpers.py  logic.py  scrape_spa.py
