[project]
name = "my-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "CTkTable>=0.10.0",
    "customtkinter>=5.2.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "qrcode[pil]>=8.2",
    "tabulate>=0.9.0",
    "ttkbootstrap>=1.17.0",
]
