[project]
name = "my-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-tkinter-loop>=0.10.2",
    "httpx>=0.28.1",
    "httpx-ntlm",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "qrcode[pil]>=8.2",
    "tabulate>=0.9.0",
    "ttkbootstrap>=1.17.0",
    "ttkwidgets>=0.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
